--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -5,14 +5,14 @@
 
     <div class="text-center">
         <h2>Edit a Recipe!</h2>
-        <p>Please fill in the form to add a recipe</p>
+        <p>Thought of new ideas to make this recipe even beter?</p>
     </div>
 
     <div class="card shadow">
         <div class="card-body">
             <form action="{{url_for('edit_recipe', recipe_id=recipe._id)}}" method="POST" class="edit-recipe-form" enctype="multipart/form-data">
             
-                <div class=" col-12 mt-3 mb-5">
+                <div class="col-10 mt-3 mb-5">
                     <!-- Recipe Title -->
                     <div class="mt-3 md-form form-lg">
                         <label for="recipe_title" class="label">Recipe title</label>
@@ -30,7 +30,7 @@
                     <div class="flex-selection">
 
                         <!-- Dish Type -->
-                        <div class="input-field col-lg-3 col-sm-4 mobile-style">
+                        <div class="input-field col-lg-2 col-sm-4 mr-3 mobile-style">
                             <label for="dish_type" class="label">Dish type</label>
                             <select class="form-control" id="type" name="dish_type" required>
                                 {% for cat in Categories %}
@@ -44,25 +44,25 @@
                         </div>
 
                         <!-- Servings -->
-                        <div class="input-field col-lg-2 col-sm-4 mobile-style">
+                        <div class="input-field col-lg-1 col-sm-4 mr-3 mobile-style">
                             <label for="recipe_serving" class="label">Serves</label>
                             <input type="number" name="serves" id="recipe_serving" required class="form-control" min="0" value="{{recipe.recipe_serving}}"/>
                         </div>
 
                         <!-- Preparation Time -->
-                        <div class="input-field col-lg-2 col-sm-4 mobile-style">
+                        <div class="input-field col-lg-2 col-sm-4 mr-3 mobile-style">
                             <label for="preparation_time" class="label">Prep time</label>
                             <input type="text" name="prep-time" id="preparation_time" required class="form-control" value="{{recipe.preparation_time}}"/>
                         </div>
 
                         <!-- Cooking Time -->
-                        <div class="input-field col-lg-2 col-sm-4 mobile-style">
+                        <div class="input-field col-lg-2 col-sm-4 mr-3 mobile-style">
                             <label for="cooking_time" class="label">Cooking time</label>
                             <input type="text" name="cooking-time" id="cooking_time" required class="form-control" value="{{recipe.cooking_time}}"/>
                         </div>
 
                         <!-- Difficulty level -->
-                        <div class="input-field col-lg-3 col-sm-4 mobile-style">
+                        <div class="input-field col-lg-2 col-sm-4 mobile-style">
                             <label for="recipe_difficulty" class="label">Level</label>
                             <select class="form-control" id="difficulty" name="recipe_difficulty" required>
                                 {% for diff in difficulty %}
@@ -80,26 +80,33 @@
 
                     <!-- Recipe Ingredients -->
                     <div class="col-10 btn-inline mb-5" id="TextBoxGroupIngredients">
-                        <div id="TextBoxIngredient">
-                            <label for="recipe_ingredients" class="label">Ingredients (One ingredient for each line)</label>
-                                <div class="flex">
-                                <input type="text" id="ingredient" name="recipe_ingredients[1]" value="" required class="form-control">
-                                <a class="btn btn-sm" id="addIngredient" role="button"><i class="fas fa-plus" aria-hidden="true "></i></a>
+                        <div id="TextBoxIngredientDiv">
+                            <label for="recipe_ingredients" class="label">Ingredients</label>
+                            
+                            {% for ingredient in recipe.recipe_ingredients %}
+                            <input type="text" id="ingredient" name="recipe_ingredients" required class="form-control mb-2" placeholder="e.g. 2 medium chopped onions" value="{{ingredient}}">
+                            {% endfor %} 
+                            
+                                <div class="row">
+                                <a class="btn btn-sm" id="addIngredient" role="button"><i class="fas fa-plus" aria-hidden="true"></i></a>
+                                <a class="btn btn-sm removeIngredientDiv" id="removeIngredient" role="button"><i class="fas fa-minus" aria-hidden="true"></i></a>
                                 </div>
                         </div>
                     </div>
 
                     <!-- Recipe Instructions -->
-                    <div class="col-12 mb-5" id="TextBoxInstructions">
-                        <div class="form-group" >
+                    <div class="col-10 mb-5 instr" id="TextBoxGroupInstructions">
+                        <div id="TextBoxInstructionDiv">
                             <label for="recipe_instruction" class="label">Instruction</label>
-                    		<div contenteditable="true" class="instruction-editor">
-                    			<ol  class="instructions">
-                    			{% for instruction in recipe.recipe_instruction %}
-                    			<li class="instruction ">{{instruction}}</li>
-                    			{% endfor %}
-                    			</ol>
-                    		</div>
+                            
+                            {% for instruction in recipe.recipe_instruction %}
+                            <textarea class="form-control text-instr mb-2" id="recipe_instruction" name="recipe_instruction" type="text" placeholder="e.g. In a hot pan combine oil, onion and pepper and cook for 5 miuntes." required>{{instruction}}</textarea>
+                            {% endfor %}
+                            
+                                <div class="row">
+                                <a class="btn btn-sm" id="addInstruction" role="button"><i class="fas fa-plus" aria-hidden="true"></i></a>
+                                <a class="btn btn-sm removeInstructionDiv" id="removeInstruction" role="button"><i class="fas fa-minus" aria-hidden="true"></i></a>
+                            </div>
                         </div>
                     </div>
                     
