--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -10,13 +10,13 @@
 
     <div class="card shadow">
         <div class="card-body">
-            <form action="{{url_for('edit_recipe', recipe_id=recipe._id)}}" method="POST" class="edit-recipe-form" enctype="multipart/form-data">
+            <form action="{{url_for('update_recipe', recipe_id=recipe._id)}}" method="POST" class="edit-recipe-form">
             
                 <div class="col-10 mt-3 mb-5">
                     <!-- Recipe Title -->
                     <div class="mt-3 md-form form-lg">
                         <label for="recipe_title" class="label">Recipe title</label>
-                        <input type="text" id="title" name="recipe_title" value="{{recipe.recipe_name}}" required class="form-control">
+                        <input type="text" id="title" name="recipe_name" value="{{recipe.recipe_name}}" required class="form-control">
                     </div>
 
                     <!-- Recipe Description -->
@@ -40,31 +40,31 @@
                                         <option value="{{cat.dish_type}}">{{cat.dish_type}}</option>
                                     {% endif %}    
                                 {% endfor %}
-                                </select>
+                            </select>
                         </div>
 
                         <!-- Servings -->
                         <div class="input-field col-lg-1 col-sm-4 mr-3 mobile-style">
                             <label for="recipe_serving" class="label">Serves</label>
-                            <input type="number" name="serves" id="recipe_serving" required class="form-control" min="0" value="{{recipe.recipe_serving}}"/>
+                            <input type="text" name="recipe_serving" id="recipe_serving" required class="form-control" value="{{recipe.recipe_serving}}"/>
                         </div>
 
                         <!-- Preparation Time -->
                         <div class="input-field col-lg-2 col-sm-4 mr-3 mobile-style">
                             <label for="preparation_time" class="label">Prep time</label>
-                            <input type="text" name="prep-time" id="preparation_time" required class="form-control" value="{{recipe.preparation_time}}"/>
+                            <input type="text" name="preparation_time" id="preparation_time" required class="form-control" value="{{recipe.preparation_time}}"/>
                         </div>
 
                         <!-- Cooking Time -->
                         <div class="input-field col-lg-2 col-sm-4 mr-3 mobile-style">
                             <label for="cooking_time" class="label">Cooking time</label>
-                            <input type="text" name="cooking-time" id="cooking_time" required class="form-control" value="{{recipe.cooking_time}}"/>
+                            <input type="text" name="cooking_time" id="cooking_time" required class="form-control" value="{{recipe.cooking_time}}"/>
                         </div>
 
                         <!-- Difficulty level -->
                         <div class="input-field col-lg-2 col-sm-4 mobile-style">
                             <label for="recipe_difficulty" class="label">Level</label>
-                            <select class="form-control" id="difficulty" name="recipe_difficulty" required>
+                            <select class="form-control" id="recipe_difficulty" name="recipe_difficulty" required>
                                 {% for diff in difficulty %}
                                     {% if diff.recipe_difficulty == recipe.recipe_difficulty %}
                                         <option value="{{diff.recipe_difficulty}}" selected>{{diff.recipe_difficulty}}</option>
@@ -72,11 +72,11 @@
                                         <option value="{{diff.recipe_difficulty}}">{{diff.recipe_difficulty}}</option>
                                     {% endif %}    
                                 {% endfor %}    
-                                </select>
+                            </select>
                         </div>
 
-                        </div>
                     </div>
+                </div>
 
                     <!-- Recipe Ingredients -->
                     <div class="col-10 btn-inline mb-5" id="TextBoxGroupIngredients">
@@ -106,7 +106,7 @@
                                 <div class="row">
                                 <a class="btn btn-sm" id="addInstruction" role="button"><i class="fas fa-plus" aria-hidden="true"></i></a>
                                 <a class="btn btn-sm removeInstructionDiv" id="removeInstruction" role="button"><i class="fas fa-minus" aria-hidden="true"></i></a>
-                            </div>
+                                </div>
                         </div>
                     </div>
                     
@@ -120,8 +120,8 @@
 
                     <!-- Submit Recipe -->
                     <div class="submit-btns col-12">
-                        <input class="btn btn-primary submit-btn" type="submit" value="Submit">
-                        <a class="btn btn-primary cancel-btn" role="button" href="{{url_for('all_recipes')}}">Cancel</a>
+                        <input class="btn btn-primary submit-btn" type="submit" value="Submit" id="submit">
+                        <a class="btn btn-primary cancel-btn" role="button" href="#">Cancel</a>
                     </div>
             
             </form>
