--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,289 +1,223 @@
-.col-2,
-.col-3,
-.col-lg-3,
-.col-sm-4,
-.col-md-3 {
-  padding-left: 0;
-  padding-right: 0;
+.col-2, .col-3, .col-lg-3, .col-sm-4, .col-md-3 {
+     padding-left: 0;
+     padding-right: 0;
 }
-
-
 /* Body */
-
-body {
-  margin-top: 10rem;
-  color: #868e96;
-  background-color: #FEFCF8;
-  width: 100%;
+ body {
+     background-color: #FEFCF8;
+     color: #868e96;
+     margin-top: 10rem;
+     width: 100%;
 }
-
-
-@media (min-width: 992px) {
-  body {
-    margin-top: 4rem;
-    color: #868e96;
-    background-color: #FEFCF8;
-  }
+ @media (min-width: 992px) {
+     body {
+         background-color: #FEFCF8;
+         color: #868e96;
+         margin-top: 4rem;
+    }
 }
-
-
 /* Side Navbar */
-
-.navbar {
-  background-color: #f1bc31!important;
+ .navbar {
+     background-color: #f1bc31!important;
 }
-
-.navbar-nav .nav-item .nav-link {
-  font-weight: 800;
-  font-size: large;
-  letter-spacing: 0.05rem;
-  color: #fff;
+ .navbar-nav .nav-item .nav-link {
+     color: #fff;
+     font-size: large;
+     font-weight: 800;
+     letter-spacing: 0.05rem;
 }
-
-@media (min-width: 992px) {
-  .navbar {
-    text-align: center;
-    position: fixed;
-    top: 0;
-    left: 0;
-    display: flex;
-    flex-direction: column;
-    width: 17rem;
-    height: 100vh;
-  }
-
-  .navbar-brand {
-    display: flex;
-    margin: auto auto 0;
-    padding: 0.5rem;
-  }
-
-  .navbar-brand .img-profile {
-    max-width: 10rem;
-    max-height: 10rem;
-    border: 0.5rem solid rgba(255, 255, 255, 0.2);
-  }
-
-  .navbar-collapse {
-    display: flex;
-    align-items: flex-start;
-    flex-grow: 0;
-    width: 100%;
-    margin-bottom: auto;
-  }
-
-  .navbar-collapse .navbar-nav {
-    flex-direction: column;
-    width: 100%;
-  }
-
-  .navbar-collapse .navbar-nav .nav-item {
-    display: block;
-  }
-
-  .navbar-collapse .navbar-nav .nav-item .nav-link {
-    display: block;
-  }
+ @media (min-width: 992px) {
+     .navbar {
+         display: flex;
+         flex-direction: column;
+         height: 100vh;
+         left: 0;
+         position: fixed;
+         text-align: center;
+         top: 0;
+         width: 17rem;
+    }
+     .navbar-brand {
+         display: flex;
+         margin: auto auto 0;
+         padding: 0.5rem;
+    }
+     .navbar-brand .img-profile {
+         border: 0.5rem solid rgba(255, 255, 255, 0.2);
+         max-height: 10rem;
+         max-width: 10rem;
+    }
+     .navbar-collapse {
+         align-items: flex-start;
+         display: flex;
+         flex-grow: 0;
+         margin-bottom: auto;
+         width: 100%;
+    }
+     .navbar-collapse .navbar-nav {
+         flex-direction: column;
+         width: 100%;
+    }
+     .navbar-collapse .navbar-nav .nav-item {
+         display: block;
+    }
+     .navbar-collapse .navbar-nav .nav-item .nav-link {
+         display: block;
+    }
 }
-
-
 /* Home Page */
-
-.intro-home,
-.recipe-card {
-  margin-bottom: 6rem;
+ .intro-home, .recipe-card {
+     margin-bottom: 6rem;
 }
-
-.card-image {
-  position: relative;
-  z-index: -1;
+ .card-image {
+     position: relative;
+     z-index: -1;
 }
-
-.card-home {
-  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.30), 0 15px 12px rgba(0, 0, 0, 0.22);
-  background-color: #fff;
-  width: 80%;
-  z-index: 3;
-  margin-left: 10%;
-  margin-top: -5%;
-  padding-top: 20px;
-  padding-bottom: 20px;
+ .card-home {
+     background-color: #fff;
+     box-shadow: 0 19px 38px rgba(0, 0, 0, 0.30), 0 15px 12px rgba(0, 0, 0, 0.22);
+     margin-left: 10%;
+     margin-top: -5%;
+     padding-bottom: 20px;
+     padding-top: 20px;
+     width: 80%;
+     z-index: 3;
 }
-
 /* Recipes */
-.recipe-card {
-  background: #fff;
-  width: 100%;
+ .recipe-card {
+     background: #fff;
+     width: 100%;
 }
-
-.fas {
-  color: #e25822;
-  font-size: xx-large;
-  padding: 10px;
+ .fas {
+     color: #e25822;
+     font-size: xx-large;
+     padding: 10px;
 }
-
-.recipe-ingredients,
-.recipe-instructions {
-  font-size: large;
-  font-weight: 600;
-  text-decoration: underline;
-  
+ .recipe-ingredients, .recipe-instructions {
+     font-size: large;
+     font-weight: 600;
+     text-decoration: underline;
 }
-
-
 /* Browser Recipe */
-
-.browser-recipe-icons .fas {
-  color: #e25822;
-  font-size: small;
+ .browser-recipe-icons .fas {
+     color: #e25822;
+     font-size: small;
 }
-
-.view-btn {
-  color: #fff;
-  background-color: #e25822;
-  border-color: #e25822;
+ .view-btn {
+     background-color: #e25822;
+     border-color: #e25822;
+     color: #fff;
 }
-
-.card img {
-  height: 10%;
-  width: 60%;
-  margin-left: 20%;
+ .card img {
+     height: 10%;
+     margin-left: 20%;
+     width: 60%;
 }
-
-@media (max-width: 991px){
-  .card-deck {
-    display: flex;
-    flex-direction: column;
-  }
+ @media (max-width: 991px){
+     .card-deck {
+         display: flex;
+         flex-direction: column;
+    }
 }
-
-@media (min-width: 992px) {
-  .card img {
-    height: 200px;
-    width: 100%;
-    margin-left: 0;
-  }
+ @media (min-width: 992px) {
+     .card img {
+         height: 200px;
+         margin-left: 0;
+         width: 100%;
+    }
 }
-
-
-
-
 /* Search Results */
-.search-result .fas {
-  font-size: medium;
+ .search-result .fas {
+     font-size: medium;
 }
-
-.search-card img {
-  height: 200px;
-  width: 100%;
-  margin-left: 0;
+ .search-card img {
+     height: 200px;
+     margin-left: 0;
+     width: 100%;
 }
-  
-@media (max-width: 768px) and (min-width: 578px) {
-  .search-result {
-    margin-left: 25px;
-    margin-right: 25px;
-  }
-  .search-deck {
-    display: flex;
-    flex-direction: inherit;
-    margin-left: 15px;
-    margin-right: 15px;
-  }
-  .search-card {
-    margin-left: 15px;
-    margin-right: 15px;
-  }
-    .search-card img {
-    height: 200px;
-    width: 100%;
-    margin-left: 0;
-  }
+ @media (max-width: 768px) and (min-width: 578px) {
+     .search-result {
+         margin-left: 25px;
+         margin-right: 25px;
+    }
+     .search-deck {
+         display: flex;
+         flex-direction: inherit;
+         margin-left: 15px;
+         margin-right: 15px;
+    }
+     .search-card {
+         margin-left: 15px;
+         margin-right: 15px;
+    }
+     .search-card img {
+         height: 200px;
+         margin-left: 0;
+         width: 100%;
+    }
 }
-
-@media (min-width: 992px) {
-  .card img {
-    height: 250px;
-    width: 100%;
-    margin-left: 0;
-  }
+ @media (min-width: 992px) {
+     .card img {
+         height: 250px;
+         margin-left: 0;
+         width: 100%;
+    }
 }
-
-
-
 /* Add Recipe */
-
-.shadow {
-  -moz-box-shadow:    3px 3px 5px 6px #ccc;
-  -webkit-box-shadow: 3px 3px 5px 6px #ccc;
-  box-shadow:         3px 3px 5px 6px #ccc;
+ .shadow {
+     -moz-box-shadow: 3px 3px 5px 6px #ccc;
+     -webkit-box-shadow: 3px 3px 5px 6px #ccc;
+     box-shadow: 3px 3px 5px 6px #ccc;
 }
-
-.label {
-  text-decoration: underline;
-  font-weight: bold;
-  margin-bottom: inherit;
+ .label {
+     font-weight: bold;
+     margin-bottom: inherit;
+     text-decoration: underline;
 }
-
-
-.btn-sm .fas {
-  color: #e25822;
-  font-size: medium;
+ .btn-sm .fas {
+     color: #e25822;
+     font-size: medium;
 }
-
-.instruction-editor {
-  display: block;
-  width: 100%;
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 1.5;
-  color: #495057;
-  background-color: #fff;
-  background-clip: padding-box;
-  border: 1px solid #ced4da;
-  border-radius: .25rem;
-  transition: bor
+ .instruction-editor {
+     background-clip: padding-box;
+     background-color: #fff;
+     border: 1px solid #ced4da;
+     border-radius: .25rem;
+     color: #495057;
+     display: block;
+     font-size: 1rem;
+     font-weight: 400;
+     line-height: 1.5;
+     padding-bottom: 0.75rem;
+     padding-top: 0.75rem;
+     width: 100%;
 }
-
-.submit-btns {
-  align-items: center;
+ .submit-btns {
+     align-items: center;
 }
-
-.submit-btn {
-  background-color: #007E33;
-  border-color: inherit;
+ .submit-btn {
+     background-color: #007E33;
+     border-color: inherit;
 }
-
-.cancel-btn {
-  background-color: #CC0000;
-  border-color: inherit;
+ .cancel-btn {
+     background-color: #CC0000;
+     border-color: inherit;
 }
-
-
-
-@media (max-width: 991px) {
-  .mobile-style {
-    margin-top: 48px;
-  }
+ @media (max-width: 991px) {
+     .mobile-style {
+         margin-top: 48px;
+    }
 }
-
-
-@media (min-width: 992px) {
-  .flex-selection {
-    display: flex;
-    flex-direction: row;
-    align-items: baseline;
-  }
-  .card img {
-    height: 200px;
-    width: 200px;
-    margin-left: 0;
-  }
+ @media (min-width: 992px) {
+     .flex-selection {
+         align-items: baseline;
+         display: flex;
+         flex-direction: row;
+    }
+     .card img {
+         height: 200px;
+         margin-left: 0;
+         width: 200px;
+    }
 }
-
-
-
-
-
+ 
