--- a/templates/base.html
+++ b/templates/base.html
@@ -1,67 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+		<title>A Chef's Book</title>
+		<link href="{{url_for('static', filename='images/favicon.ico')}}" rel="icon" type="image/x-icon" />
+		<!-- Bootstrap CSS -->
+		<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+		<!-- Font Awesome -->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css" integrity="sha256-zmfNZmXoNWBMemUOo1XUGFfc0ihGGLYdgtJS3KCr/l0=" crossorigin="anonymous" />
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.11/css/mdb.min.css" rel="stylesheet">
+		<!-- Custom Styling -->
+		<link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}" type="text/css" />
+	</head>
+	
+	<body>
+		<!-- NavBar -->
+		<header>
+			<nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="sideNav">
+			<!-- Navbar Logo -->
+			<a class="navbar-brand" href="{{url_for('home_page')}}">
+			<img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="https://res.cloudinary.com/dbnahdjbc/image/upload/c_limit,h_100,w_150/v1571492467/A%20Chefs%20Book/images_lfcgfy.png" alt="Page logo">
+			</a>
+			<!-- Navbar Navigators -->
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
+			</button>
+				<div class="collapse navbar-collapse" id="navbarSupportedContent">
+					<ul class="navbar-nav">
+							<li class="nav-item">
+								<a class="nav-link" href="{{url_for('browser_recipes')}}">Browser</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="{{url_for('add_recipe')}}">Add Recipe</a>
+							</li>
+					</ul>
+				</div>
+			</nav>
+		</header>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <main>
+        {% block content %} {% endblock %}
+        </main>
 
-    <title>A Chef's Book</title>
-    <link href="{{url_for('static', filename='images/favicon.ico')}}" rel="icon" type="image/x-icon" />
-
-    <!-- Bootstrap -->
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css" integrity="sha256-zmfNZmXoNWBMemUOo1XUGFfc0ihGGLYdgtJS3KCr/l0=" crossorigin="anonymous" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.11/css/mdb.min.css" rel="stylesheet">
-    <!-- Custom Styling -->
-    <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}" type="text/css" />
-</head>
-    
-<body>
-
-    <!-- NavBar -->
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="sideNav">
-            <!-- Navbar Logo -->
-            <a class="navbar-brand" href="{{url_for('home_page')}}">
-            <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="https://res.cloudinary.com/dbnahdjbc/image/upload/c_limit,h_100,w_150/v1571492467/A%20Chefs%20Book/images_lfcgfy.png" alt="Page logo">
-        </a>
-
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="{{url_for('all_recipes')}}">Browser</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{{url_for('add_recipe')}}">Add Recipe</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Edit Recipe</a></li>
-                </ul>
-            </div>
-        </nav>
-    </header>
-
-
-
-    {% block content %} {% endblock %}
-
-
-<!-- Scripts -->
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js" integrity="sha256-fTuUgtT7O2rqoImwjrhDgbXTKUwyxxujIMRIK7TbuNU=" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js " integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM " crossorigin="anonymous "></script>
-<script type="text/javascript" src="{{url_for('static', filename='js/interact.js')}}"></script>
-
-
-
-</body>
-
-<footer class="col-lg-6 offset-lg-4">
-    <!-- Copy-Rights -->
-    <div class="footer-copyright text-center">
-        <p>Copyright &copy; 2019 All rights reserved | For educational use only | This web page is made by
-            <a target=_blank href="https://www.linkedin.com/in/cindymarchena/ ">C. Marchena</a>
-        </p>
-    </div>
-</footer>
+		<!-- Footer -->						
+		<footer class="col-lg-6 offset-lg-4">
+			<!-- Copy-Rights -->
+			<div class="footer-copyright text-center">
+			    <p>Copyright &copy; 2019 All rights reserved | For educational use only | This web page is made by 
+			    <a target=_blank href="https://www.linkedin.com/in/cindymarchena/ ">C. Marchena</a>
+			    </p>
+			</div>
+		</footer>
+								
+								
+		<!-- Scripts -->
+		<!-- Axios Script for image upload to Cloudinary -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js" integrity="sha256-S1J4GVHHDMiirir9qsXWc8ZWw74PHHafpsHp5PXtjTs=" crossorigin="anonymous"></script>
+		<!-- Jquery -->
+		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
+		<!-- Popper -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js" integrity="sha256-fTuUgtT7O2rqoImwjrhDgbXTKUwyxxujIMRIK7TbuNU=" crossorigin="anonymous"></script>
+		<!-- Bootstrap JS -->
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js " integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM " crossorigin="anonymous "></script>
+		<!-- JS Script -->
+		<script type="text/javascript" src="{{url_for('static', filename='js/script.js')}}"></script>
+		<script type="text/javascript" src="{{url_for('static', filename='js/image.js')}}"></script>						
+								
+								
+	</body>
 </html>
