--- a/templates/single_recipe.html
+++ b/templates/single_recipe.html
@@ -1,57 +1,57 @@
 {% extends 'base.html' %}
-{% block content %}
+{% block single_recipe %}
 
-<div class="recipe-card col-lg-6 offset-lg-4">
-
+	<div class="recipe-card col-lg-6 offset-lg-4">
+	
 	{% for recipe in recipes %}
-	<article>
-
-		<h2 class="recipe-title">{{recipe.recipe_name}}</h2>
-		<h5 class="recipe-type">{{recipe.dish_type}}</h5>
-
-		<ul class="list-unstyled list-inline rating mb-0 text-center>
-					<li class=" list-inline-item mr-0 "><i class="fas fa-user "></i><span>{{recipe.dish_type}}</span></li>
-					<li class=" list-inline-item mr-0 "><i class="fas fa-user "></i><span>{{recipe.recipe_serving}}</span></li>
-					<li class="list-inline-item mr-0 "><i class="fas fa-clock "></i><span>{{recipe.preparation_time}}</span></li>
-					<li class="list-inline-item mr-0 "><i class="fas fa-stopwatch "></i><span>{{recipe.cooking_time}}</span></li>
-					<li class="list-inline-item mr-0 "><i class="fas fa-signal "></i><span>{{recipe.recipe_difficulty}}</span></li>
-				</ul>
-		
-		<hr>
-		
-		<p class="recipe-description ">{{recipe.recipe_description}}</p>
-				
-		<hr>
-				
-		<p class="recipe-ingredients ">Ingredients:
-			<ul class="ingredient ">
-				{% for ingredient in recipe.recipe_ingredients %}
-				<li>{{ingredient}}</li>
-				{% endfor %}
+		<article>
+	
+			<h2 class="recipe-title">{{recipe.recipe_name}}</h2>
+			<h5 class="recipe-type">{{recipe.dish_type}}</h5>
+	
+			<ul class="list-unstyled list-inline rating mb-0 text-center">
+				<li class="list-inline-item mr-0"><i class="fas fa-user"></i><span>{{recipe.dish_type}}</span></li>
+				<li class="list-inline-item mr-0"><i class="fas fa-user"></i><span>{{recipe.recipe_serving}}</span></li>
+				<li class="list-inline-item mr-0"><i class="fas fa-clock"></i><span>{{recipe.preparation_time}}</span></li>
+				<li class="list-inline-item mr-0"><i class="fas fa-stopwatch"></i><span>{{recipe.cooking_time}}</span></li>
+				<li class="list-inline-item mr-0"><i class="fas fa-signal"></i><span>{{recipe.recipe_difficulty}}</span></li>
 			</ul>
-		</p>
-				
-		<hr>
-				
-		<p class="recipe-instructions "><span>Instructions:</p>
-			<ol class="instructions ">
-				{% for instruction in recipe.recipe_instruction %}
-				<li class="instruction ">{{instruction}}</li>
-				{% endfor %}
-			</ol>	
-		</p>
+			
+			<hr>
+			
+			<p class="recipe-description">{{recipe.recipe_description}}</p>
 					
+			<hr>
+					
+			<p class="recipe-ingredients"><span>Ingredients:</span>
+				<ul class="ingredient">
+					{% for ingredient in recipe.recipe_ingredients %}
+					<li>{{ingredient}}</li>
+					{% endfor %}
+				</ul>
+			</p>
+					
+			<hr>
+					
+			<p class="recipe-instructions"><span>Instructions:</span>
+				<ol class="instructions">
+					{% for instruction in recipe.recipe_instruction %}
+					<li class="instruction">{{instruction}}</li>
+					{% endfor %}
+				</ol>	
+			</p>
+						
+		
+		</article>
+		
+		<!-- Submit Recipe -->
+		<div class="submit-btns col-12">
+			<a class="btn btn-primary submit-btn" id="editButton" href="{{url_for('edit_recipe', recipe_id=recipe._id)}}">Edit</a>
+			<a class="btn btn-primary cancel-btn deleteConfirm" role="button" id="deleteConfirm" href="{{url_for('delete_recipe', recipe_id=recipe._id)}}">Delete</a>
+		</div>   
+		
+	</div>
 	
-	</article>
-	
-	<!-- Submit Recipe -->
-	<div class="submit-btns col-12 ">
-		<a class="btn btn-primary submit-btn" id="editButton" href="{{url_for('edit_recipe', recipe_id=recipe._id)}}">Edit</a>
-		<a class="btn btn-primary cancel-btn deleteConfirm" role="button" id="deleteConfirm" href="{{url_for('delete_recipe', recipe_id=recipe._id)}}">Delete</a>
-	</div>   
-	
-</div>
-
 	{% endfor %}
 
 {% endblock %}
